--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "reactjswyszgif",
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "http-server": "^0.10.0"
   },
-  
   "version": "1.0.0",
   "description": "\"wyszukiwarka gifow\"",
   "main": "script.js",
